# forge

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  RELEASE_NOTES.md  SECURITY.md
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_hardening.yml
.github/workflows/: ci.yml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: args.rs  main.rs  review.rs  schema.rs
crates/forge-cli/src/commands/: core.rs  export.rs  mod.rs  sync.rs
crates/forge-cli/tests/: forge_accept_export.rs  forge_attempts.rs  forge_compare.rs  forge_concurrency.rs  forge_conflict_set.rs  forge_crash_injection.rs  forge_doctor_gc.rs  forge_encrypted_private_content.rs  forge_errors.rs  forge_init.rs  forge_intents.rs  forge_large_file.rs  forge_migration_upgrade.rs  forge_native_diff.rs  forge_native_history.rs  forge_native_merge.rs  forge_native_status_cache.rs  forge_org_identity.rs  forge_pack_gc.rs  forge_pr_body.rs  forge_propose_check.rs  forge_repo_lock.rs  forge_review_surface.rs  forge_run_evidence.rs  forge_schema.rs  forge_secret_export.rs  forge_signatures.rs  forge_start_save.rs  forge_storage_budget.rs  forge_structured_gate.rs  forge_sync.rs  forge_sync_peer.rs  forge_tamper.rs  forge_trust_policy.rs  forge_visibility.rs
crates/forge-cli/tests/common/: mod.rs
crates/forge-cli/tests/support/: sync.rs
crates/forge-content/: Cargo.toml
crates/forge-content-git/: Cargo.toml
crates/forge-content-native/: Cargo.toml
crates/forge-content-native/src/: lib.rs  pack.rs  status_cache.rs  workspace_equality.rs
crates/forge-core/: Cargo.toml
crates/forge-evidence/: Cargo.toml
crates/forge-export-git/: Cargo.toml
crates/forge-export-git/src/: lib.rs
crates/forge-policy/: Cargo.toml
crates/forge-private/: Cargo.toml
crates/forge-protocol/: Cargo.toml
crates/forge-store/: Cargo.toml
crates/forge-store/migrations/: 001_init.sql  002_columns.sql  003_check_spec.sql  004_integrity_and_actor.sql  005_native_history.sql  006_native_history_commit_id.sql  007_expected_content_ref.sql  008_conflict_data.sql  009_attempt_workspaces.sql  010_storage_policy.sql  011_local_signatures.sql  012_trust_policy.sql  013_signing_key_origins.sql  014_sync_merge_signature_subject.sql  015_trust_ladder_attestation_levels.sql  016_hosted_runner_attestations.sql  017_third_party_attestations.sql  018_visibility_policy.sql  019_org_identity_governance.sql  020_encrypted_private_content.sql  021_embargo_workflow.sql
crates/forge-store/src/: attempts.rs  compare.rs  conflict.rs  doctor.rs  embargo.rs  error.rs  evidence.rs  gc.rs  integrity.rs  intents.rs  internal.rs  lib.rs  merge.rs  migrations.rs  private_overlay.rs  proposals.rs  publication.rs  repo_lock.rs  repository.rs  show.rs  signing.rs  snapshots.rs  storage.rs  sync.rs  tests.rs  trust.rs  visibility.rs
crates/forge-store/tests/: dependency_boundary.rs  migrate.rs  replay_guard.rs
crates/forge-sync/: Cargo.toml
crates/forge-sync/src/: lib.rs
docs/: IDEA.md  P9_RELEASE_AUDIT.md  RELEASE_CHECKLIST.md  ROADMAP.md
docs/adr/: 0001-domain-modules.md
docs/brainstorms/: 2026-05-28-competing-local-attempts-requirements.md  2026-05-29-claude-session-relay-design.md  2026-05-29-encrypted-env-secrets-requirements.md  2026-05-31-ner-139-phase-8-requirements.md  2026-06-23-permissioned-forge-requirements.md  2026-06-24-encrypted-private-content-requirements.md  2026-06-24-org-identity-key-governance-requirements.md  2026-06-26-embargoed-security-fix-workflow-requirements.md  2026-07-05-context-closed-tasks-v2.md  2026-07-06-context-closed-tasks-landscape-and-substrate.md  2026-07-06-context-closed-tasks-v3.md  forge-v0-wedge-requirements.md
docs/code-reviews/: 2026-05-29-ner-133-phase-2.md  2026-05-29-ner-134-phase-3.md  2026-05-29-ner-135-phase-4.md  2026-05-29-phase-1a-pr-b-concurrency.md  2026-05-29-phase-1b-crash-correctness.md  2026-05-30-ner-136-phase-5.md  2026-05-30-ner-137-phase-6.md  2026-05-30-ner-138-phase-7-slice-1.md  2026-05-30-ner-138-phase-7-slice-2.md  2026-05-30-ner-138-phase-7-slice-3.md  2026-05-31-ner-142-export-z-quote-secret-leak.md  2026-05-31-ner-143-pr-a-gc-failclosed-s1-init-symlink.md  2026-05-31-ner-143-pr-b-expected-content-dirty-check.md  2026-06-08-phase-9-key-lifecycle-sync-manifest.md  2026-06-08-phase-9-signed-export-bridge.md  2026-06-08-phase-9-trust-policy.md  README.md
docs/dogfood-reports/: 2026-06-24-ner-357-identity-governance-dogfood.md  2026-06-26-ner-358-embargoed-security-fix-workflow.md  2026-07-03-ner-359-review-surface.md
docs/handoffs/: 2026-05-29-m1-phase-1b-and-2-kickoff.md  2026-05-29-ner-133-phase-2-kickoff.md  2026-05-29-phase-1a-pr-b.md  2026-05-30-ner-138-phase-7-slice-2-kickoff.md  2026-05-30-ner-138-phase-7-slice-3-kickoff.md  2026-05-31-ner-139-phase-8-kickoff.md  2026-05-31-ner-142-ner-143-consolidation-kickoff.md  2026-06-01-phase-8-slice-1-ce-work-kickoff.md  2026-07-06-ccx-thin-harness.md  README.md
docs/plans/: 2026-05-28-001-feat-forge-v0-local-loop-plan.md  2026-05-28-002-hardening-forge-v0-local-loop-plan.md  2026-05-28-003-feat-native-forge-content-store-plan.md  2026-05-28-004-feat-competing-local-attempts-plan.md  2026-05-28-005-fix-substrate-phase-1a-plan.md  2026-05-29-006-fix-phase-1b-crash-correctness-plan.md  2026-05-29-007-feat-phase-2-migrations-typed-errors-plan.md  2026-05-29-008-feat-phase-3-write-binding-verification-plan.md  2026-05-29-009-feat-phase-4-declarative-check-engine-plan.md  2026-05-30-010-feat-phase-5-tamper-evident-evidence-plan.md  2026-05-30-011-feat-phase-6-compare-rank-provenance-plan.md  2026-05-30-012-feat-phase-7-slice-1-native-walker-plan.md  (+14 more)
scripts/: bench-native-storage.sh  check-rust-line-count.sh  ci.sh  dogfood-hosted-runner-attestation.sh  dogfood-native-storage-scale.sh  dogfood-native-sync-peer-nogit.sh  dogfood-native-sync-peer.sh  dogfood-native-sync-release-litmus.sh  dogfood-release-gate.sh  dogfood-typescript-native.sh  e2e-eval.sh
(+238 files in other folders)
