[workspace]
members = [
    "crates/forge-cli",
    "crates/forge-content",
    "crates/forge-content-git",
    "crates/forge-core",
    "crates/forge-evidence",
    "crates/forge-export-git",
    "crates/forge-policy",
    "crates/forge-protocol",
    "crates/forge-store",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
clap = { version = "4.5.26", features = ["derive"] }
predicates = "3.1.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tempfile = "3.15.0"
