[workspace]
members = [
    "crates/forge-cli",
    "crates/forge-content",
    "crates/forge-content-git",
    "crates/forge-content-native",
    "crates/forge-core",
    "crates/forge-evidence",
    "crates/forge-export-git",
    "crates/forge-policy",
    "crates/forge-private",
    "crates/forge-protocol",
    "crates/forge-store",
    "crates/forge-sync",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.95"
assert_cmd = "2.0.16"
age = "0.11.3"
clap = { version = "4.5.26", features = ["derive"] }
ignore = "0.4.25"
predicates = "3.1.3"
regex = "1.12.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
ring = "0.17.8"
secrecy = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
similar = { version = "2.7.0", features = ["bytes"] }
tempfile = "3.15.0"
ureq = { version = "2.12.1", features = ["json"] }
uuid = { version = "1.23.1", features = ["v7"] }
zstd = "0.13.3"
