[package]
name = "forge-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
forge-content = { path = "../forge-content" }
forge-content-git = { path = "../forge-content-git" }
forge-evidence = { path = "../forge-evidence" }
forge-export-git = { path = "../forge-export-git" }
forge-policy = { path = "../forge-policy" }
forge-protocol = { path = "../forge-protocol" }
forge-store = { path = "../forge-store" }
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tempfile.workspace = true
