[package]
name = "forge-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
forge-content = { path = "../forge-content" }
forge-content-git = { path = "../forge-content-git" }
forge-content-native = { path = "../forge-content-native" }
forge-evidence = { path = "../forge-evidence" }
forge-export-git = { path = "../forge-export-git" }
forge-protocol = { path = "../forge-protocol" }
forge-store = { path = "../forge-store" }
forge-sync = { path = "../forge-sync" }
serde_json.workspace = true
ureq.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
forge-content-native = { path = "../forge-content-native" }
predicates.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
zstd.workspace = true
