[package]
name = "forge-content-native"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
forge-content = { path = "../forge-content" }
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
tempfile.workspace = true
zstd.workspace = true
