[package]
name = "forge-export-git"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
forge-content = { path = "../forge-content" }
forge-content-git = { path = "../forge-content-git" }
forge-content-native = { path = "../forge-content-native" }
forge-store = { path = "../forge-store" }
tempfile.workspace = true
