[package]
name = "forge-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
forge-content-native = { path = "../forge-content-native" }
forge-core = { path = "../forge-core" }
forge-policy = { path = "../forge-policy" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
