[package]
name = "forge-sync"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
forge-content = { path = "../forge-content" }
forge-content-native = { path = "../forge-content-native" }
forge-protocol = { path = "../forge-protocol" }
forge-store = { path = "../forge-store" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
